minden feladat kapott sajat metodust